WebRTC: got incorrect `this` in negotiationneeded event https://bugs.webkit.org/show_bug.cgi?id=200427

Reviewed by Darin Adler.

Source/WebCore:

Make sure a dom object created through a JS built-in constructor is added to the wrapper cache.

Test: webrtc/onnegotiationneeded.html

* bindings/js/JSDOMBuiltinConstructor.h:
(WebCore::createJSObjectFromWrapper):
(WebCore::createJSObject):

LayoutTests:

* webrtc/onnegotiationneeded-expected.txt: Added.
* webrtc/onnegotiationneeded.html: Added.


Canonical link: https://commits.webkit.org/214205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248267 268f45cc-cd09-0410-ab3c-d52691b4dbfc